# wps_github_viewer

./: README.md  manage.py  pyproject.toml
github_viewer/: asgi.py  settings.py  urls.py  wsgi.py
viewer/: github.py  views.py
viewer/templates/: view_account.html
