[tool.poetry]
name = "wps"
version = "0.1.0"
description = ""
authors = ["uhbif19 <uhbif19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django-allauth = "^0.51.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
