[tool.poetry]
name = "wps"
version = "0.1.0"
description = ""
authors = ["uhbif19 <uhbif19@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.4"
django-environ = "^0.9.0"
Django = "^4.1"
social-auth-app-django = "^5.0.0"
funcy = "^1.17"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
